# recherche-m2-xai-faas

./: .gitignore  README.md
code/: MEMOIRE.md  README.md  STEPS.md  pyproject.toml
code/notebooks/: Clustering_DBSCAN.ipynb  EDA_clusters.ipynb  README.md  _generate_optimized_cluster4.py  _generate_softcam_cluster4.py  _generate_softcam_cluster4_v2_runA.py  _generate_softcam_cluster4_v2_runB.py  _generate_softcam_cluster4_v2_runB2.py  _generate_softcam_cluster4_v3_h1_analysis.py  _generate_softcam_cluster4_v3_h1fg_revisited.py  _generate_softcam_cluster4_v3_mix_ablation.py  _generate_softcam_cluster4_v3_reeval_fix5.py  _generate_softcam_cluster4_v3_runB3.py  _generate_softcam_cluster4_v3_runB4.py  _generate_softcam_cluster4_v3_runB5.py  _generate_softcam_cluster4_v3_runB6.py  _generate_softcam_cluster4_v3_runB7.py  baseline-cluster0.ipynb  baseline-cluster4.ipynb  baseline-cluster6.ipynb  baseline-cluster8.ipynb  baseline-fayam-transformer.ipynb  evidence-layer-v4-sanity.ipynb  optimized-cluster4.ipynb  softcam-cluster4-v2-runA.ipynb  softcam-cluster4-v2-runB.ipynb  softcam-cluster4-v2-runB2.ipynb  softcam-cluster4-v3-h1-analysis.ipynb  softcam-cluster4-v3-h1fg-revisited.ipynb  softcam-cluster4-v3-mix-ablation.ipynb  softcam-cluster4-v3-reeval-fix5.ipynb  softcam-cluster4-v3-runB3.ipynb  softcam-cluster4-v3-runB4.ipynb  softcam-cluster4-v3-runB5.ipynb  softcam-cluster4-v3-runB6.ipynb  softcam-cluster4-v3-runB7.ipynb  softcam-cluster4-v4-runC1.ipynb  softcam-cluster4-v4-runC2.ipynb  softcam-cluster4-v4-runC3-sweep.ipynb  softcam-cluster4-v5-runD1-comparison.ipynb  (+1 more)
(+120 files in other folders)
